# PrismRx_LavaLamps_InnovationsHacks26

./: .env  .env.example  .gitignore  ALIGNMENT_REPORT.md  BACKEND_IMPLEMENTATION.md  BACKEND_README.md  Makefile  PLAN.md  README.md  Repo_Bootstrap_Prompt.md  STRUCTURE.md  dev3.md  docker-compose.override.yml  docker-compose.yml  main.py  pitch.md  questions.md  requirements.txt
.claude/: settings.local.json
apps/api/: .coverage  Dockerfile  alembic.ini  ingest_all.py  pyproject.toml  pytest.ini  requirements.txt  run_alembic.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/app/api/: diff.py  ingest.py  live.py  matrix.py  policies.py  policy_crawl.py  policy_lookup.py  simulate.py
apps/api/app/core/: config.py  database.py
apps/api/app/extractors/: policy_extractor.py
apps/api/app/models/: __init__.py  drug.py  policy.py  policy_dna.py
apps/api/app/parsers/: html_parser.py  pdf_parser.py
apps/api/app/pipelines/: ingest_pipeline.py
apps/api/app/routers/: __init__.py  diff.py  ingest.py  matrix.py  policies.py  simulate.py
apps/api/app/schemas/: __init__.py  policies.py  policy.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: __init__.py  parser.py
apps/api/app/services/crawler/: policy_crawler.py
apps/api/app/services/llm/: bedrock_client.py  gemini_client.py
apps/api/app/services/llm/prompts/: extraction.txt  normalization.txt
docs/: PrismRx_Hackathon_Sprint_Plan_Final.docx
policy_docs/: aetna_infliximab_cpb0341_2026.txt  (+1 more)
(+112 files in other folders)
